# azmcts

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/workflows/: ci.yml  smoke.yml  test.yml
demo/: package.json  pnpm-lock.yaml  vite.config.ts
demo/src/components/: MoveInfoHistory.vue  ParticlesVisualizer.vue
demo/src/lib/: types.ts
demo/src/views/: GameView.vue  HomeView.vue
reports/thesis/: main.tex
src/: openspiel.py
src/agents/: __init__.py  az_bsmcts.py  base.py  bsmcts.py
src/belief/: tree.py
src/belief/samplers/: __init__.py  base.py  particle.py
src/nets/: __init__.py  tiny_policy_value.py
src/scripts/: api.py
src/scripts/common/: agent_factory.py  config.py  io.py  seeding.py
src/scripts/eval/: match.py  plot.py  sweep.py
src/scripts/train/: __init__.py  main.py  plot.py
src/scripts/tune/: main.py  plot.py
src/utils/: utils.py
tests/: test_game_length_tracking.py  test_reproducibility.py  test_train_resume.py
tests/agents/: test_az_bsmcts.py
tests/belief/: test_particle_sampler.py  test_tree.py
