[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license = { text = "Apache-2.0" }
name = "azbsmcts"
version = "0.1.0"
description = "AlphaZero inspired AI for Phantom Go"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "open-spiel",
  "torch",
  "optuna",
  "matplotlib",
]

[dependency-groups]
dev = [
  "ruff",
  "ipykernel",
  "python-lsp-server",
  "pytest",
  "mypy",
  "pylint",
  "pylint-google-style-guide-imports-enforcing",
]

[project.scripts]
train = "scripts.train.main:main"
tune = "scripts.tune.main:main"
plot-train = "scripts.train.plot:main"
plot-tune = "scripts.tune.plot:main"
eval-match = "scripts.eval.match:main"
eval-sweep = "scripts.eval.sweep:main"
plot-eval = "scripts.eval.plot:main"
api = "scripts.api:main"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
ignore_missing_imports = true


[tool.pylint.master]
load-plugins = ["pylint_google_style_guide_imports_enforcing"]

[tool.pylint.messages_control]
disable = ["all"]
enable = ["C5101"]

[tool.ruff.lint]
extend-select = [
  "F",   # Pyflakes rules
  "I",   # Sort imports properly
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC", # Good use of string concatenation
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "PTH", # Use pathlib instead of os.path
  "TID", # Tidy import rules
  "TC",  # Type check rules
]
ignore = [
  "SIM108", # Use ternary operator instead of `if`-`else`-block
  "SIM105", # Use `contextlib.suppress` instead of `try`-`except`-pass
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tool.uv]
default-groups = ["dev"]
